[gd_scene load_steps=15 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Player/Player.gd" type="Script" id=2]
[ext_resource path="res://ToolNodes/GroundDetector.tscn" type="PackedScene" id=3]
[ext_resource path="res://Player/Audio/Jump.tres" type="Resource" id=4]
[ext_resource path="res://ToolNodes/DelayedRepeater.tscn" type="PackedScene" id=5]
[ext_resource path="res://Player/Audio/Land.tres" type="Resource" id=6]
[ext_resource path="res://ToolNodes/ShapeModifierTool.gd" type="Script" id=7]
[ext_resource path="res://ToolNodes/AudioClipPlayer.tscn" type="PackedScene" id=8]
[ext_resource path="res://Player/Audio/Walk_0.tres" type="Resource" id=9]
[ext_resource path="res://Player/Audio/Walk_1.tres" type="Resource" id=10]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 28, 28 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 28, 4 )

[sub_resource type="Curve" id=3]
max_value = 10.0
_data = [ Vector2( 0, 3.63636 ), 0.0, 41.398, 0, 0, Vector2( 0.283993, 9.45455 ), 0.0, 0.0, 0, 0, Vector2( 0.755594, 4.45455 ), -20.612, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=4]
offsets = PoolRealArray( 0, 0.729825, 1 )
colors = PoolColorArray( 1, 1, 1, 0.631373, 0.760784, 0.760784, 0.760784, 1, 1, 1, 1, 0 )

[node name="Player" type="KinematicBody2D" groups=[
"Player",
]]
collision/safe_margin = 2.0
script = ExtResource( 2 )
gravity = 16.0
horizontal_speed = 8.0
skin_width = 2.0

[node name="icon" type="Sprite" parent="."]
position = Vector2( 0, -32 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -32 )
shape = SubResource( 1 )

[node name="GroundDetector" parent="." instance=ExtResource( 3 )]
collision_mask = 2
land_player_path = NodePath("../LandPlayer")
land_particles_path = NodePath("../LandParticles")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="GroundDetector"]
visible = false
shape = SubResource( 2 )
script = ExtResource( 7 )
target = NodePath("..")

[node name="JumpPlayer" parent="." instance=ExtResource( 8 )]
current_clip = ExtResource( 4 )

[node name="LandPlayer" parent="." instance=ExtResource( 8 )]
current_clip = ExtResource( 6 )

[node name="WalkPlayer" parent="." instance=ExtResource( 5 )]
current_clip = ExtResource( 9 )
delay = 0.8
audioclip_set = [ ExtResource( 9 ), ExtResource( 10 ) ]

[node name="WalkParticles" type="CPUParticles2D" parent="."]
z_index = 1
z_as_relative = false
emitting = false
amount = 16
lifetime = 0.5
local_coords = false
gravity = Vector2( 0, -10 )
angle = -45.0
angle_random = 1.0
scale_amount = 5.0
scale_amount_random = 1.0
scale_amount_curve = SubResource( 3 )
color_ramp = SubResource( 4 )

[node name="JumpParticles" type="CPUParticles2D" parent="."]
z_index = 1
z_as_relative = false
emitting = false
lifetime = 0.5
one_shot = true
explosiveness = 1.0
lifetime_randomness = 0.23
local_coords = false
emission_shape = 3
emission_points = PoolVector2Array( -4, 0, 4, 0 )
emission_colors = PoolColorArray(  )
direction = Vector2( 0, 1 )
gravity = Vector2( 0, -10 )
initial_velocity = 20.0
initial_velocity_random = 1.0
angular_velocity = -107.44
angular_velocity_random = 0.74
angle = -45.0
angle_random = 1.0
scale_amount = 5.0
scale_amount_random = 0.75
scale_amount_curve = SubResource( 3 )
color_ramp = SubResource( 4 )

[node name="LandParticles" type="CPUParticles2D" parent="."]
z_index = 1
z_as_relative = false
emitting = false
lifetime = 0.5
one_shot = true
explosiveness = 1.0
lifetime_randomness = 0.23
local_coords = false
emission_shape = 3
emission_points = PoolVector2Array( -8, 0, 8, 0 )
emission_colors = PoolColorArray(  )
direction = Vector2( 0, 1 )
gravity = Vector2( 0, -10 )
initial_velocity = 20.0
initial_velocity_random = 1.0
angular_velocity = -107.44
angular_velocity_random = 0.74
angle = -45.0
angle_random = 1.0
scale_amount = 7.5
scale_amount_random = 0.75
scale_amount_curve = SubResource( 3 )
color_ramp = SubResource( 4 )

[connection signal="body_entered" from="GroundDetector" to="GroundDetector" method="_on_GroundDetector_body_entered"]
[connection signal="body_exited" from="GroundDetector" to="GroundDetector" method="_on_GroundDetector_body_exited"]
